--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                 <h3>Leveraging AI Agents to Connect Learners with Learners</h3>
             </div>
             <div class="theme-box" onclick="window.open('theme4_page.html', '_blank')">
-                <h3>AI Agents for Multilingual and Accessibility Support in India</h3>
+                <h3>AI Agents for Multilingual and Accessibility Support</h3>
             </div>
             <div class="theme-box" onclick="window.open('theme5_page.html', '_blank')">
                 <h3>AI-Powered Peer Feedback Coach for STEM Outputs</h3>
