sponsor images goes to link

--- a/index.html
+++ b/index.html
@@ -1034,14 +1034,33 @@
         <h2>Sponsors</h2>
         <div class="sponsor-grid">
             <div class="sponsor-box">
-                <img src="msft.png" alt="Sponsor 1" onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>Sponsor Logo 1</div>'">
-            </div>
-            <div class="sponsor-box">
-                <img src="icl.png" alt="Sponsor 2" onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>Sponsor Logo 2</div>'">
-            </div>
-            <div class="sponsor-box">
-                <img src="iitd.png" alt="Sponsor 3" onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>Sponsor Logo 3</div>'">
-            </div>
+    <a href="https://www.microsoft.com" target="_blank">
+        <img src="msft.png" alt="Microsoft"
+             onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>Microsoft</div>'">
+    </a>
+</div>
+
+<div class="sponsor-box">
+    <a href="https://www.microsoft.com/en-us/garage/" target="_blank">
+        <img src="garage.png" alt="Microsoft Garage"
+             onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>IHFC Garage</div>'">
+    </a>
+</div>
+
+<div class="sponsor-box">
+    <a href="https://www.imperial.ac.uk/" target="_blank">
+        <img src="icl.png" alt="ICL"
+             onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>ICL</div>'">
+    </a>
+</div>
+
+<div class="sponsor-box">
+    <a href="https://home.iitd.ac.in/" target="_blank">
+        <img src="iitd.png" alt="IIT Delhi"
+             onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>IIT Delhi</div>'">
+    </a>
+</div>
+
         </div>
     </section>
 
