--- a/index.html
+++ b/index.html
@@ -296,37 +296,78 @@
             margin-bottom: 0.5rem;
         }
 
-        /* Sponsor Section */
-        #sponsors {
-            background: #f8f9fa;
-        }
+/* Sponsors Section */
+#sponsors {
+    padding: 4rem 1rem;
+    text-align: center;
+}
 
-        .sponsor-grid {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 4rem;
-            margin-top: 2rem;
-            flex-wrap: wrap;
-        }
+#sponsors h2 {
+    font-size: 2.2rem;
+    margin-bottom: 2.5rem;
+}
 
-        .sponsor-box {
-            width: 200px;
-            height: 200px;
-            background: white;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            padding: 1rem;
-        }
+/* Grid */
+.sponsor-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 2rem;
+    max-width: 1000px;
+    margin: 0 auto;
+}
 
-        .sponsor-box img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
-        }
+/* Sponsor Box */
+.sponsor-box {
+    background: white;
+    border-radius: 12px;
+    height: 200px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    transition: box-shadow 0.2s ease, transform 0.2s ease;
+}
+
+/* Make entire box clickable */
+.sponsor-box a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1.2rem;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Logo */
+.sponsor-box img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    transition: transform 0.2s ease;
+}
+
+/* Hover effects */
+.sponsor-box:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+}
+
+.sponsor-box:hover img {
+    transform: scale(1.05);
+}
+
+/* Fallback text */
+.sponsor-fallback {
+    color: #999;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+/* Mobile tuning */
+@media (max-width: 480px) {
+    .sponsor-box {
+        height: 160px;
+    }
+}
 
         /* Team Section */
         .team-grid {
@@ -1030,39 +1071,41 @@
     </section>
 
     <!-- Sponsors Section -->
-    <section id="sponsors">
-        <h2>Sponsors</h2>
-        <div class="sponsor-grid">
-            <div class="sponsor-box">
-    <a href="https://www.microsoft.com" target="_blank">
-        <img src="msft.png" alt="Microsoft"
-             onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>Microsoft</div>'">
-    </a>
-</div>
+   <!-- Sponsors Section -->
+<section id="sponsors">
+    <h2>Sponsors</h2>
 
-<div class="sponsor-box">
-    <a href="https://www.microsoft.com/en-us/garage/" target="_blank">
-        <img src="garage.png" alt="Microsoft Garage"
-             onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>IHFC Garage</div>'">
-    </a>
-</div>
-
-<div class="sponsor-box">
-    <a href="https://www.imperial.ac.uk/" target="_blank">
-        <img src="icl.png" alt="ICL"
-             onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>ICL</div>'">
-    </a>
-</div>
-
-<div class="sponsor-box">
-    <a href="https://home.iitd.ac.in/" target="_blank">
-        <img src="iitd.png" alt="IIT Delhi"
-             onerror="this.parentElement.innerHTML='<div style=\'color:#999\'>IIT Delhi</div>'">
-    </a>
-</div>
-
+    <div class="sponsor-grid">
+        <div class="sponsor-box">
+            <a href="https://www.microsoft.com" target="_blank" aria-label="Microsoft">
+                <img src="msft.png" alt="Microsoft"
+                     onerror="this.parentElement.innerHTML='<div class=&quot;sponsor-fallback&quot;>Microsoft</div>'">
+            </a>
         </div>
-    </section>
+
+        <div class="sponsor-box">
+            <a href="https://www.microsoft.com/en-us/garage/" target="_blank" aria-label="Microsoft Garage">
+                <img src="garage.png" alt="Microsoft Garage"
+                     onerror="this.parentElement.innerHTML='<div class=&quot;sponsor-fallback&quot;>IHFC Garage</div>'">
+            </a>
+        </div>
+
+        <div class="sponsor-box">
+            <a href="https://www.imperial.ac.uk/" target="_blank" aria-label="Imperial College London">
+                <img src="icl.png" alt="Imperial College London"
+                     onerror="this.parentElement.innerHTML='<div class=&quot;sponsor-fallback&quot;>ICL</div>'">
+            </a>
+        </div>
+
+        <div class="sponsor-box">
+            <a href="https://home.iitd.ac.in/" target="_blank" aria-label="IIT Delhi">
+                <img src="iitd.png" alt="IIT Delhi"
+                     onerror="this.parentElement.innerHTML='<div class=&quot;sponsor-fallback&quot;>IIT Delhi</div>'">
+            </a>
+        </div>
+    </div>
+</section>
+
 
     <!-- Team Section -->
     <section id="team">
