--- a/theme2_page.html
+++ b/theme2_page.html
@@ -444,27 +444,26 @@
 </p>
 <p class="description-text">
     <strong>Sample description by:</strong> Team Members
-    (<a href="#" target="_blank">for website: hyperlink</a>)
+    (<a href="https://drive.google.com/file/d/1rSKNvlCdhZvlZ3oI5gh47GLO4henBmxI/view?usp=drive_link" target="_blank">Click here</a>)
 </p>
 
         </div>
 
         <div class="developers-section">
-            <h2>Theme Developers</h2>
+            <h2>Theme Champions</h2>
             <p class="developers-subtitle">Meet the experts guiding this theme</p>
 
             <div class="developers-grid">
                 <div class="developer-card">
-                    <div class="developer-photo">Add Photo</div>
-                    <h3>Developer Name</h3>
-                    <div class="developer-role">Role / Position</div>
-                    <p>Add information and details about the developer's expertise and background here</p>
+                    <!-- <div class="developer-photo">Add Photo</div> -->
+                    <h3>Humanshu D G</h3>
+                    <div class="developer-role">M.Tech in Electrical Engineering,2024</div>
+                    
                 </div>
                 <div class="developer-card">
-                    <div class="developer-photo">Add Photo</div>
-                    <h3>Developer Name</h3>
-                    <div class="developer-role">Role / Position</div>
-                    <p>Add information and details about the developer's expertise and background here</p>
+                    <!-- <div class="developer-photo">Add Photo</div> -->
+                    <h3>Rohan Roy</h3>
+                    <div class="developer-role">B.Tech in Mathematics and Computing,2022</div>
                 </div>
             </div>
         </div>
