--- a/theme4_page.html
+++ b/theme4_page.html
@@ -443,27 +443,31 @@
 </p>
 <p class="description-text">
     <strong>Sample description by:</strong> Team Members
-    (<a href="#" target="_blank">for website: hyperlink</a>)
+    (<a href="https://docs.google.com/presentation/d/1SYvn6nsI3FmyiulZvH9ipDcrRisNPAtE/edit?usp=sharing&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
 </p>
         </div>
 
         <div class="developers-section">
-            <h2>Theme Developers</h2>
+            <h2>Theme Champions</h2>
             <p class="developers-subtitle">Meet the experts guiding this theme</p>
 
             <div class="developers-grid">
                 <div class="developer-card">
-                    <div class="developer-photo">Add Photo</div>
-                    <h3>Developer Name</h3>
-                    <div class="developer-role">Role / Position</div>
-                    <p>Add information and details about the developer's expertise and background here</p>
+                    <!-- <div class="developer-photo">Add Photo</div> -->
+                    <h3>Sambhav</h3>  
+                    <!-- <div class="developer-role">B.Tech. in Energy Sciences and Engineering, 2023</div> -->
                 </div>
                 <div class="developer-card">
-                    <div class="developer-photo">Add Photo</div>
-                    <h3>Developer Name</h3>
-                    <div class="developer-role">Role / Position</div>
-                    <p>Add information and details about the developer's expertise and background here</p>
+                    <!-- <div class="developer-photo">Add Photo</div> -->
+                    <h3>Mayank</h3>
+                    <!-- <div class="developer-role">B.Tech. in Mechanical Engineering, 2023</div> -->
                 </div>
+                <div class="developer-card">
+                    <!-- <div class="developer-photo">Add Photo</div> -->
+                    <h3>Sameer</h3>
+                    <!-- <div class="developer-role">B.Tech. in Mechanical Engineering, 2023</div> -->
+                </div>
+                
             </div>
         </div>
 
