prize section responsiveness

--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,13 @@
         font-size: 2.2rem;
     }
 }
+@media (max-width: 768px) {
+    .prize-grid {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+}
+
 
 
     </style>
